tests/netconvert/import/XML/errors/xml_looped_edge/net.netconvert
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Mon Feb 17 15:30:51 2020 by Eclipse SUMO netconvert Version v1_5_0+0130-ceb0a01
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
SPDX-License-Identifier: EPL-2.0
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/netconvertConfiguration.xsd">

    <input>
        <node-files value="input_nodes.nod.xml"/>
        <edge-files value="input_edges.edg.xml"/>
    </input>

    <output>
        <write-license value="true"/>
        <output-file value="net.net.xml"/>
    </output>

    <report>
        <xml-validation value="never"/>
        <aggregate-warnings value="5"/>
    </report>

</configuration>
-->

<net version="1.6" junctionCornerDetail="5" limitTurnSpeed="5.50" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/net_file.xsd">

    <location netOffset="-10000000000.00,-10000000000.00" convBoundary="0.00,0.00,-20000000000.00,-20000000000.00" origBoundary="0.00,0.00,1295.49,190.99" projParameter="!"/>



</net>
